[package]
name = "serpico"
version = "0.0.3"
authors = ["Axel <serpico@absalon.dev>"]
description = "A CLI tool to run and deploy MicroPython code to Raspberry Pi Pico devices. \"SERial PICO\""
repository = "https://github.com/ikornaselur/serpico"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
serialport = "4.2.0"
